docs/Grammar/BantGrammar.tex
% !TEX TS-program = pdflatex
% !TEX encoding = UTF-8 Unicode

% This is a simple template for a LaTeX document using the "article" class.
% See "book", "report", "letter" for other types of document.

\documentclass[11pt]{article} % use larger type; default would be 10pt

\usepackage[utf8]{inputenc} % set input encoding (not needed with XeLaTeX)

%%% Examples of Article customizations
% These packages are optional, depending whether you want the features they provide.
% See the LaTeX Companion or other references for full information.

%%% PAGE DIMENSIONS
\usepackage{geometry} % to change the page dimensions
\geometry{a4paper} % or letterpaper (US) or a5paper or....
% \geometry{margin=2in} % for example, change the margins to 2 inches all round
% \geometry{landscape} % set up the page for landscape
%   read geometry.pdf for detailed page layout information

\usepackage{graphicx} % support the \includegraphics command and options

% \usepackage[parfill]{parskip} % Activate to begin paragraphs with an empty line rather than an indent

%%% PACKAGES
\usepackage{booktabs} % for much better looking tables
\usepackage{array} % for better arrays (eg matrices) in maths
\usepackage{paralist} % very flexible & customisable lists (eg. enumerate/itemize, etc.)
\usepackage{verbatim} % adds environment for commenting out blocks of text & for better verbatim
\usepackage{subfig} % make it possible to include more than one captioned figure/table in a single float
% These packages are all incorporated in the memoir class to one degree or another...

%%% HEADERS & FOOTERS
\usepackage{fancyhdr} % This should be set AFTER setting up the page geometry
\pagestyle{plain} % options: empty , plain , fancy
\renewcommand{\headrulewidth}{0pt} % customise the layout...
\lhead{}\chead{}\rhead{}
\lfoot{}\cfoot{\thepage}\rfoot{}

%%% SECTION TITLE APPEARANCE
\usepackage{sectsty}
\allsectionsfont{\sffamily\mdseries\upshape} % (See the fntguide.pdf for font help)
% (This matches ConTeXt defaults)

%%% ToC (table of contents) APPEARANCE
\usepackage[nottoc,notlof,notlot]{tocbibind} % Put the bibliography in the ToC
\usepackage[titles,subfigure]{tocloft} % Alter the style of the Table of Contents
\renewcommand{\cftsecfont}{\rmfamily\mdseries\upshape}
\renewcommand{\cftsecpagefont}{\rmfamily\mdseries\upshape} % No bold!

%%% END Article customizations

%%% The "real" document content comes below...

\usepackage{syntax}

\begin{document}

\paragraph{Delimiters}

\begin{grammar}

<singleQuote> ::= '

<doubleQuote> ::= ''

<terminator> ::= `;' | `\\n'

\end{grammar}

\paragraph{Primitive Types}

\begin{grammar}

<int> ::= [ integer ]

<bool> ::= `true' | `false'

<char> ::= <singleQuote>[ character ]<singleQuote>

<string> ::= <doubleQuote>[ character* ]<doubleQuote>

<null> ::= `null'

\end{grammar}

\paragraph{Algebraic Data Types and Type-Traits}

\begin{grammar}

<generic> ::= `['<ident>[`,' <ident>]*`]'

<adt> ::= `type' <ident>[<generic>][`:' <ident>[<generic>]]`\{'[<ident>`:'<type>[`,' <ident>`:'<type>]*]`\}'
 
<typeclass> ::= `typeclass' <ident> `\{'[<ident>`='<type>[`,'<ident>`='<type>]* ]`\}'

<instance> ::= `instance' <ident>`:'<ident>`\{'<prog>`\}'

\end{grammar}

\paragraph{Types}

\begin{grammar}

<type> ::= `int' | `bool' | `char' | `string' | `null'
\alt <type> `->' <type>
\alt `('[<type>[`,' <type>]*]`)' `->' `('[<type>[`,' <type>]*]`)'
\alt `List' | `Array' | `Set' `['<type>`]'
\alt `Tuple' `['<type>[`,' <type>]*`]'
\alt `Dict' `['<type>`,' <type>`]'
\alt <ident>[`['<type>`]']

\end{grammar}

\paragraph{Arithmetic and Boolean Operators}

\begin{grammar}

<arithOp> ::= `+' | `-' | `*' | `/' | `\%'

<boolOp> ::= `<' | `>' | `<=' | `>=' | `!' | `!=' | `==' | `\&\&' | `||'

<op> ::= <arithOp> | <boolOp> 

\end{grammar}

\paragraph{Functions}

\begin{grammar}

<arg> ::= <ident>`:'<type>[`='<atom>]

<lowerBoundOp> ::= `>:'

<upperBoundOp> ::= `<:'

<bounding> ::= [<lowerBoundOp><ident>][<upperBoundOp><ident>]

<templateTypes> ::= `['<ident><bounding>[`,' <ident><bounding>]*`]'

<funDef> ::= `fn' <ident>[<templateTypes>]`('[<arg> [`,' <arg>]* ]`)'[`->'<type>]`='<smp><terminator>

<prog> ::= [<funDef>]*

<app> ::= <atom>[ [`['<type>[`,' <type>]*`]' ]* [`('[<smp>[`,' <smp>]*]`)']* ]

<anonLmbd> ::= `\\'<arg>[`->'<type>]`='<smp>

\end{grammar}

\paragraph{Pattern Matching and Switches}

\begin{grammar}

<caseVal> ::= <type>|<smp>

<match> ::= `match' `('<smp>`)' `\{'`case' <caseVal>`=>' <smp>[`case' <caseVal> `=>' <smp>]*`\}'

<matchSwitch> ::= <match> | <switch>

\end{grammar}

\paragraph{Expressions}

\begin{grammar}

<atom> ::= <int> | <bool> | <char> | <string> | <null>
\alt `('<smp>`)'
\alt <ident>[`.'<ident>]*

<tight> ::= <app>[`|>'<app>]
\alt '\{'<exp>`\}'

<utight> ::= [<op>]<tight>

<smp> ::= <utight>[<op><utight>]
\alt `if' `('<smp>`)' <smp> [`else' <smp>]
\alt `List' | `Tuple' | `Array' | `Set' `\{'[<smp>[`,' <smp>]*]`\}'
\alt `Dict' `\{'[<smp>`:'<smp>[`,' <smp>`:'<smp>]*]`\}'
\alt <matchSwitch>
\alt <typeclass>
\alt <instance>
\alt <adt>
\alt <prog>
\alt <anonLmbd>

<exp> ::= <smp>[<terminator><exp>]
\alt [`lazy'] `val' <ident>[`:'<type>] `=' <smp><terminator><exp>
\alt `include' <file><terminator><exp>

\end{grammar}

\end{document}
